--- a/src/Resources/views/Admin/UiElement/column.html.twig
+++ b/src/Resources/views/Admin/UiElement/column.html.twig
@@ -5,12 +5,17 @@
         content
 #}
 {% if element.content|default('') is not empty %}
-<div class="ui grid equal width">
-    {% set content = monsieurbiz_richeditor_get_elements(element.content) %}
-    {% for row in content %}
-        <div class="column" style="border: 2px dashed rgba(34,36,38,0.38); padding: 10px; margin: 10px; position: relative;">
-           {{ row | monsieurbiz_richeditor_render_element }}
-        </div>
-    {% endfor %}
+
+{% set content = monsieurbiz_richeditor_get_elements(element.content) %}
+{% set length = content|length %}
+
+<div class="container">
+    <div class="row row-cols-{{ length }}">
+        {% for row in content %}
+            <div class="col" style="border: 2px dashed rgba(34,36,38,0.38); padding: 10px;">
+                {{ row | monsieurbiz_richeditor_render_element }}
+            </div>
+        {% endfor %}
+    </div>
 </div>
 {% endif %}
