--- a/src/Resources/views/Admin/UiElement/image_collection.html.twig
+++ b/src/Resources/views/Admin/UiElement/image_collection.html.twig
@@ -4,16 +4,19 @@
     element fields :
         images
 #}
-<div class="ui stackable two column grid">
-    {% for image in element.images %}
-        <div class="column">
-            {% if image.link is not empty %}
-                <a href="{{ image.link }}">
-                    <img class="ui fluid image" src="{{ monsieurbiz_richeditor_get_media_without_upload_dir(image.image)|imagine_filter('monsieurbiz_rich_editor_image') }}" alt="{{ image.alt|default('') }}" title="{{ image.title|default('') }}" />
-                </a>
-            {% else %}
-                <img class="ui fluid image" src="{{ monsieurbiz_richeditor_get_media_without_upload_dir(image.image)|imagine_filter('monsieurbiz_rich_editor_image') }}" alt="{{ image.alt|default('') }}" title="{{ image.title|default('') }}" />
-            {% endif %}
-        </div>
-    {% endfor %}
+<div class="container">
+    <div class="row row-cols-2">
+        {% for image in element.images %}
+            <div class="col">
+                {% if image.link is not empty %}
+                    <a href="{{ image.link }}">
+                        <img class="img-fluid" src="{{ monsieurbiz_richeditor_get_media_without_upload_dir(image.image)|imagine_filter('monsieurbiz_rich_editor_image') }}" alt="{{ image.alt|default('') }}" title="{{ image.title|default('') }}" />
+                    </a>
+                {% else %}
+                    <img class="img-fluid" src="{{ monsieurbiz_richeditor_get_media_without_upload_dir(image.image)|imagine_filter('monsieurbiz_rich_editor_image') }}" alt="{{ image.alt|default('') }}" title="{{ image.title|default('') }}" />
+                {% endif %}
+            </div>
+        {% endfor %}
+    </div>
 </div>
+
