--- a/src/Resources/views/Admin/UiElement/row.html.twig
+++ b/src/Resources/views/Admin/UiElement/row.html.twig
@@ -5,7 +5,7 @@
         content
 #}
 {% if element.content|default('') is not empty %}
-    <div class="ui grid equal width">
+    <div class="container">
     {% set content = monsieurbiz_richeditor_get_elements(element.content) %}
     {% for column in content %}
         <div class="row" style="border: 2px dashed rgba(34, 36, 38, 0.1); padding: 10px; margin: 10px;">
