--- a/src/Resources/views/Admin/UiElement/separator.html.twig
+++ b/src/Resources/views/Admin/UiElement/separator.html.twig
@@ -4,4 +4,4 @@
     element fields :
         hidden
 #}
-<div class="ui {% if element is not empty and element.hidden is not empty %}hidden{% endif %} divider"></div>
+<hr class="hr {% if element is not empty and element.hidden is not empty %}d-none{% endif %}" />
